<?xml version="1.0"?>
<package format="2">
  <name>ros_daemon</name>
  <version>0.2.8</version>
  <description>The ros_daemon package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="g.suddrey@qut.edu.au">Gavin Suddrey</maintainer>


  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>qcr_env</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
